Adding copy class to media queries

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
       /*Landscape phones and down */
       @media (max-width:480px) {
       
+      .copy {
+      padding:2.5% 10%;
+      }
+
       .linediv-l {
       border-bottom:1px solid white;
       }
