Fixing font-family

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       }
 
       body {
-        font-family: 'Opera Sans', Helvetica, Arial, sans-serif;
+        font-family: 'Open Sans', Helvetica, Arial, sans-serif;
       }
       .heading, .subheading {
       font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
